# action_recognition

./: pyproject.toml
src/action_recognition/: __init__.py
